--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps",
+    "generate-docs": "jsdoc -r -c ./.jsdoc.json --verbose",
+    "remove-dist": "rm -rf ./dist_electron",
+    "analyse": "webpack-bundle-analyzer ./dist/stats.json"
   },
   "main": "background.js",
   "dependencies": {
@@ -19,19 +22,33 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.3.0",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-plugin-router": "^4.1.0",
     "@vue/cli-plugin-vuex": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
-    "@vue/eslint-config-standard": "^4.0.0",
+    "@vue/eslint-config-standard": "^5.0.1",
     "babel-eslint": "^10.0.3",
-    "electron": "^6.0.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "css-loader": "^3.3.0",
+    "cssnano": "^4.1.10",
+    "electron": "^7.1.3",
+    "eslint": "^6.7.2",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^6.0.1",
+    "jsdoc": "^3.6.3",
+    "jsdoc-vuejs": "^3.0.5",
+    "minami": "^1.2.3",
+    "postcss-import": "^12.0.1",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
+    "terser-webpack-plugin": "^2.2.2",
     "vue-cli-plugin-electron-builder": "^1.4.3",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack-bundle-analyzer": "^3.6.0"
   }
 }
