--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
     "generate-docs": "jsdoc -r -c ./.jsdoc.json --verbose",
-    "remove-dist": "rm -rf ./dist_electron",
+    "clean": "rm -rf ./dist_electron ./out ./dist",
     "analyse": "webpack-bundle-analyzer ./dist/stats.json"
   },
   "main": "background.js",
@@ -33,6 +33,7 @@
     "babel-plugin-transform-remove-console": "^6.9.4",
     "css-loader": "^3.3.0",
     "cssnano": "^4.1.10",
+    "cssstats": "^3.4.0",
     "electron": "^7.1.3",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.19.1",
@@ -44,6 +45,7 @@
     "jsdoc-vuejs": "^3.0.5",
     "minami": "^1.2.3",
     "postcss-import": "^12.0.1",
+    "postcss-reporter": "^6.0.1",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
     "terser-webpack-plugin": "^2.2.2",
