--- a/package.json
+++ b/package.json
@@ -6,51 +6,51 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "analyse": "webpack-bundle-analyzer ./dist/stats.json",
+    "clean": "rm -rf ./dist_electron ./out ./dist",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
-    "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps",
     "generate-docs": "jsdoc -r -c ./.jsdoc.json --verbose",
-    "clean": "rm -rf ./dist_electron ./out ./dist",
-    "analyse": "webpack-bundle-analyzer ./dist/stats.json"
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps"
   },
   "main": "background.js",
   "dependencies": {
-    "core-js": "^3.4.3",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "core-js": "^3.6.5",
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.6",
+    "vuex": "^3.2.0"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^1.3.0",
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-plugin-router": "^4.1.0",
-    "@vue/cli-plugin-vuex": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
-    "@vue/eslint-config-standard": "^5.0.1",
-    "babel-eslint": "^10.0.3",
+    "@fullhuman/postcss-purgecss": "^2.1.2",
+    "@vue/cli-plugin-babel": "^4.3.1",
+    "@vue/cli-plugin-eslint": "^4.3.1",
+    "@vue/cli-plugin-router": "^4.3.1",
+    "@vue/cli-plugin-vuex": "^4.3.1",
+    "@vue/cli-service": "^4.3.1",
+    "@vue/eslint-config-standard": "^5.1.2",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "css-loader": "^3.3.0",
+    "css-loader": "^3.5.2",
     "cssnano": "^4.1.10",
-    "cssstats": "^3.4.0",
-    "electron": "^7.1.3",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-node": "^10.0.0",
+    "cssstats": "^3.4.1",
+    "electron": "^8.2.3",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^6.0.1",
-    "jsdoc": "^3.6.3",
-    "jsdoc-vuejs": "^3.0.5",
+    "eslint-plugin-vue": "^6.2.2",
+    "jsdoc": "^3.6.4",
+    "jsdoc-vuejs": "^3.0.8",
     "minami": "^1.2.3",
     "postcss-import": "^12.0.1",
     "postcss-reporter": "^6.0.1",
-    "sass": "^1.23.7",
-    "sass-loader": "^8.0.0",
-    "terser-webpack-plugin": "^2.2.2",
-    "vue-cli-plugin-electron-builder": "^1.4.3",
-    "vue-template-compiler": "^2.6.10",
-    "webpack-bundle-analyzer": "^3.6.0"
+    "sass": "^1.26.3",
+    "sass-loader": "^8.0.2",
+    "terser-webpack-plugin": "^2.3.5",
+    "vue-cli-plugin-electron-builder": "^1.4.6",
+    "vue-template-compiler": "^2.6.11",
+    "webpack-bundle-analyzer": "^3.7.0"
   }
 }
